# advent-of-code

./: .gitignore
2023/d/: default.nix  dub.sdl  flake.nix
2023/d/dcd/: default.nix
2023/d/source/: day1.d
2023/d/source/day1/: day1.d
2023/d/source/day2/: day2.d
2023/d/source/day6/: day6.d
2023/python/: .envrc  flake.nix
2023/python/src/: day1.py  day2.py  day3.py  day4.py  day6.py  main.py  utils.py
2023/zig/: build.zig  flake.nix
2023/zig/src/: day1.zig  day6.zig
rust/: Cargo.toml
rust/src/: main.rs  problem.rs
rust/src/solutions/: mod.rs
rust/src/solutions/y2015/: day1.rs  day2.rs  mod.rs
scala/: flake.nix
scala/2015/: day1.scala  day2.scala  day3.scala  input.scala
zig/: build.zig  flake.nix
zig/src/: day02.zig  day03.zig  day04.zig  day05.zig  day06.zig  day07.zig  main.zig  utils.zig
