[package]
name = "rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "aoc_lib"
path = "src/lib/mod.rs"

[[bin]]
name = "aoc"
path = "src/main.rs"

[dependencies]
clap = { version = "4.3.3", features = ["derive"] }
